--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -50,8 +50,8 @@
             <div class="col-md-3 col-xs-6">
                 <div class="gioithieu">
                     <h3 class="header text-uppercase font-weight-bold">Về LoveBook</h3>
-                    <a href="https://www.facebook.com/doanthanhhiep206">Giới thiệu về LoveBook</a>
-                    <a href="https://www.facebook.com/doanthanhhiep206">Tuyển dụng</a>
+                    <a href="https://www.facebook.com/nguyentritaydayne">Giới thiệu về LoveBook</a>
+                    <a href="https://www.facebook.com/nguyentritaydayne">Tuyển dụng</a>
                    
                 </div>
             </div>
