--- a/views/user/order.ejs
+++ b/views/user/order.ejs
@@ -198,9 +198,9 @@
               Hỗ trợ khách hàng
               <ul id="UL_466">
                 <li id="LI_467">
-                  Email: gblhiep@gmail.com
+                  Email: tay54570@donga.edu.vn
                   <ul id="UL_468">
-                    <li id="LI_469">Hotline: <b id="B_470">0386728493</b></li>
+                    <li id="LI_469">Hotline: <b id="B_470">0385598131</b></li>
                   </ul>
                 </li>
               </ul>
@@ -258,7 +258,7 @@
         <div id="DIV_502">
           <div id="DIV_503">Copyright © LoveBook</div>
           <div id="DIV_504"></div>
-          <div id="DIV_505">Địa chỉ: 141 chiến thắng, thanh trì, hà nội KMA</div>
+          <div id="DIV_505">Địa chỉ: 33 XNVT, Hải Châu, Đà Nẵng</div>
           <div id="DIV_506"></div>
           <div id="DIV_507">
             <a href="http://online.gov.vn/Home/WebDetails/9908" id="A_508"
